# capital-watch-analyzer

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RESEARCH.md  SETUP.md
scripts/: run-weekly.sh
src/: cli.py
src/analyzer/: __init__.py  api_client.py  config.py  distributor.py  heuristics.py  report_generator.py  scheduler.py  ticker_normalizer.py
tests/: test_api_client.py  test_distributor.py  test_ticker_normalizer.py
